fixed styles of cart items on small devices

--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -241,6 +241,7 @@
   height: 3rem;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  word-break: break-all;
   display: -webkit-box;
   overflow: hidden;
 }
@@ -248,7 +249,6 @@
 .itemFlex {
   height: 32px;
   display: flex;
-  justify-content: space-between;
   align-items: stretch;
   grid-gap: 1rem;
   gap: 1rem;
@@ -290,5 +290,20 @@
 
   .scroll {
     padding-top: 3rem;
+  }
+
+  .itemFlex {
+    flex-direction: column;
+  }
+
+  
+}
+
+@media (max-width: 400px) {
+  .itemFlex {
+    height: unset;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    gap: 0.75rem;
   }
 }
